fix: svg visual alignment

--- a/packages/video-button/style.module.css
+++ b/packages/video-button/style.module.css
@@ -32,6 +32,9 @@
 
   & svg {
     fill: currentColor;
+
+    /* Visually align the icon */
+    transform: translateX(1px);
   }
 
   /* Themes */
